# rust_halstead_js

./: .gitignore  Cargo.toml  README.md  operands.csv  operators.csv  program.js  properties.csv  second_lab.js  test.js
src/: another.rs  code_editor.rs  halstead.rs  main.rs  metrics.rs  operands.csv  properties.csv  syntax_highlighting.rs
