[package]
name = "halstead_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = { version = "0.21.0" }
egui_extras = "0.21.0"
enum-map = "2.4.2"
rslint_parser = "0.3.1"
syntect = "5.0.0"
tracing-subscriber = "0.3.16"
